Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.1 ----------

[w4l] Added help files

[w2x] Bugfix: A textposition of 0% is no longer considered to be superscript

[all] OFFICE_HOME and URE_HOME in build.xml renamed to OFFICE_CLASSES and URE_CLASSES,
  which should now point directly to the directory containing the jars

[w2x] Added support for text:start-value in outline numbering and list styles (the latter
  is only relevant if use_list_hack is true)

[all] Use zeropadding on exported images (ie file-img001 etc.)

[w2l] Bugfix: Add \par after display equation when formatting>=convert_most

[w2l] The custom preamble is now available in the API as a normal option "custom-preamble"

[all] Extended configuration API with the new notion "complex" options

[w2l] Bugfix (ODF 1.1): Allow soft page breaks in display equations

[w2l] Added new value "convert_geometry" for the option "page_formatting"
  (export geometry but not header and footer)

[w2x] Use svg:title as alternative text on graphics if svg:desc is not present

[all] Bugfix: Filtername (Writer2LaTeX/Writer2xhtml) was not displayed in error messages

[w2x] New option hexadecimal_entities with values true (default) and false.
  When this option is set to true, numeric character entities are exported
  using hexadecimal numbers, otherwise decimal numbers are used

[w2x] Export tabs as ASCII TAB rather than space

[w2l] Allow additional characters in bibliography keys (_, - and :)

[w2l] Bugfix: Fixed crash when using the option external_bibtex_files

[w2l] New options: table_first_head_style, table_head_style, table_foot_style and
  table_last_foot_style. These can be used to access the advanced table head/table foot
  features of supertabular and longtable: If the first paragraph in the first cell in
  a row uses one of the styles given by these optons, the row is exported as part of the
  first head, head, foot or last foot.
